SWC-6549 - Fix checkbox + label spacing and provide a solution for centering a checkbox without a label.

--- a/packages/synapse-react-client/src/template_style/_form.scss
+++ b/packages/synapse-react-client/src/template_style/_form.scss
@@ -64,9 +64,16 @@
   input[type='radio'] + label,
   input[type='radio'] + span {
     position: relative;
-    padding-left: 22px;
     margin-top: 5px;
     margin-bottom: 5px;
+    // This padding gives space between the label and the input
+    padding-left: 22px;
+  }
+
+  input[type='checkbox'] + label[aria-hidden='true'],
+  input[type='radio'] + label[aria-hidden='true'] {
+    // If the label is hidden, shrink the padding down to the size of the input
+    padding-left: 16px;
   }
 
   input[type='checkbox'] + label::before,
